--- a/styles/main.scss
+++ b/styles/main.scss
@@ -330,3 +330,81 @@ nav {
     }
   }
 }
+
+.stats {
+  border-image: linear-gradient($primary 0 0) fill 0 / auto / 0 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  margin-top: $section-margin;
+  padding: 6rem 0;
+  gap: 4rem;
+  height: 100vh;
+  position: relative;
+
+  h2 {
+    @include big-title;
+    font-size: 6rem;
+    text-align: center;
+  }
+
+  p {
+    font-size: 2.5rem;
+  }
+
+  button {
+    background-color: white;
+    color: $primary;
+    border: none;
+    border-radius: $radius;
+    padding: 1rem;
+  }
+
+  img {
+    position: absolute;
+    bottom: 17%;
+    width: 100%;
+  }
+}
+
+footer {
+  margin-top: $section-margin;
+
+  .first {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    .newsletter {
+      form {
+        border: 1px solid black;
+        border-radius: $radius;
+        padding: 0.5rem;
+
+        input {
+          border: none;
+        }
+
+        button {
+          border: none;
+          background: $primary;
+          color: white;
+          border-radius: $radius;
+          padding: 1rem;
+        }
+      }
+    }
+  }
+
+  .second {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    font-size: 1rem;
+
+    > div:first-of-type {
+      display: flex;
+    }
+  }
+}
