--- a/styles/main.css
+++ b/styles/main.css
@@ -295,4 +295,71 @@ nav button:hover {
   width: max-content;
 }
 
+.stats {
+  border-image: linear-gradient(#ff7235 0 0) fill 0/auto/0 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  margin-top: 100px;
+  padding: 6rem 0;
+  gap: 4rem;
+  height: 100vh;
+  position: relative;
+}
+.stats h2 {
+  font-size: 8rem;
+  font-weight: 600;
+  font-size: 6rem;
+  text-align: center;
+}
+.stats p {
+  font-size: 2.5rem;
+}
+.stats button {
+  background-color: white;
+  color: #ff7235;
+  border: none;
+  border-radius: 10px;
+  padding: 1rem;
+}
+.stats img {
+  position: absolute;
+  bottom: 17%;
+  width: 100%;
+}
+
+footer {
+  margin-top: 100px;
+}
+footer .first {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+footer .first .newsletter form {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+footer .first .newsletter form input {
+  border: none;
+}
+footer .first .newsletter form button {
+  border: none;
+  background: #ff7235;
+  color: white;
+  border-radius: 10px;
+  padding: 1rem;
+}
+footer .second {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-size: 1rem;
+}
+footer .second > div:first-of-type {
+  display: flex;
+}
+
 /*# sourceMappingURL=main.css.map */
