--- a/styles/main.scss
+++ b/styles/main.scss
@@ -369,21 +369,67 @@ nav {
 }
 
 footer {
-  margin-top: $section-margin;
+  margin: $section-margin 0;
 
   .first {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 
+    > p {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+
+      span {
+        color: white;
+        background: $primary;
+        padding: 0.5rem;
+        border-radius: 100%;
+        width: 2rem;
+        height: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
+    h4 {
+      padding-bottom: 3rem;
+      font-size: 2rem;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      li {
+        margin-bottom: 1.5rem;
+      }
+    }
+
     .newsletter {
+      p {
+        color: $text;
+
+        &:last-of-type {
+          font-size: 1rem;
+        }
+      }
+
       form {
+        margin: 2rem 0;
         border: 1px solid black;
         border-radius: $radius;
         padding: 0.5rem;
 
         input {
           border: none;
+
+          &::placeholder {
+            color: black;
+            font-size: 1rem;
+            font-weight: 500;
+          }
         }
 
         button {
